tljh.yaml
apiVersion: v1
kind: Service
metadata:
        name: tljh
spec:
        sessionAffinity: ClientIP
        type: LoadBalancer
        externalIPs:
                - 210.94.194.102
        selector:
                app: tljh
        ports:
                - name: http
                  port: 1415
                  targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
        labels:
                app: tljh
        name: tljh
spec:
        selector:
                matchLabels:
                        app: tljh
        template:
                metadata:
                        labels:
                                app: tljh
                spec:
                        containers:
                                - image: dguplms/tljh-plass:1.0
                                  name: tljh
                                  ports:
                                          - containerPort: 80
                                  securityContext:
                                          privileged: true
                        imagePullSecrets:
                                - name: regcred
