Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shastra
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: shastra.dongguk.edu
    http:
      paths:
      - path: /projects
        pathType: Prefix
        backend:
          serviceName: project-client
          servicePort: http
      - path: /hub, /user
        pathType: Prefix
        backend:
          serviceName: tljh
          servicePort: http
      - path: /
        pathType: Prefix
        backend:
          serviceName: plms
          servicePort: http
          #tls:
          #- host: shastra.dongguk.edu
          #secretName: shastra-tls
